# nanobot

./: pyproject.toml
docs/: configuration.md
examples/hello-plugin/: pyproject.toml
examples/hello-plugin/nanobot_hello/: __init__.py
nanobot/agent/: loop.py  runner.py  subagent.py
nanobot/agent/tools/: long_task.py
nanobot/channels/: base.py  feishu.py  manager.py  slack.py  telegram.py  websocket.py
nanobot/cli/: commands.py
nanobot/command/: __init__.py  builtin.py  plugin.py  router.py
nanobot/config/: paths.py
nanobot/pairing/: store.py
nanobot/plugins/: __init__.py  manager.py
nanobot/providers/: image_generation.py
nanobot/templates/agent/long_task/: step_final.md  step_middle.md  step_start.md  validation.md
tests/agent/: test_loop_goal_wall_timeout.py
tests/agent/tools/: test_long_task.py
tests/channels/: test_base_channel.py  test_channel_plugins.py  test_telegram_channel.py  test_websocket_channel.py
tests/command/: test_plugin_commands.py
tests/pairing/: test_store.py
tests/providers/: test_image_generation.py
